plugins {
  id 'java'
  id 'org.springframework.boot' version '3.3.3'
  id 'io.spring.dependency-management' version '1.1.6'
  id 'org.springdoc.openapi-gradle-plugin' version '1.6.0'  // OpenAPI plugin
}

group = 'com.stpp'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-security'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  runtimeOnly 'org.postgresql:postgresql'
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'
  implementation group: 'org.hibernate', name: 'hibernate-validator', version: '8.0.1.Final'
  compileOnly 'org.projectlombok:lombok'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
  implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.27.0'
  testImplementation 'com.h2database:h2'
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testImplementation 'org.springframework.security:spring-security-test'
  developmentOnly 'org.springframework.boot:spring-boot-devtools'
  implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.1'

  implementation 'org.mapstruct:mapstruct:1.6.2'
  implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'

//    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

//    implementation 'io.springfox:springfox-boot-starter:3.0.0'

  //    implementation 'io.springfox:springfox-swagger2:3.0.0'

  //    implementation 'io.springfox:springfox-boot-starter:3.0.0'
  //    implementation 'javax.servlet:javax.servlet-api:4.0.1'

  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'


//        implementation 'org.openapitools:jackson-databind-nullable:0.2.1'
//        implementation 'org.springdoc:springdoc-openapi-ui:1.5.10'
//        implementation 'org.webjars:webjars-locator-core:0.46'
//        implementation 'io.github.classgraph:classgraph:4.8.47'

}

tasks.named('test') {
  useJUnitPlatform()
}
